<resources>
    <string name="app_name">Tip Time</string>
    <string name="ETHint1">Cost of Service</string>
    <string name="tv1">How was the service?</string>
    <string name="pilihan1">Amazing (20%)</string>
    <string name="pilihan2">Good (18%)</string>
    <string name="pilihan3">OK (15%)</string>
    <string name="tswitch">Round up tip?</string>
    <string name="button">Calculate</string>
    <string name="tv2">Tip Amount</string>

</resources>