<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hitam"
    android:paddingStart="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ET1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/putih"
        android:ems="10"
        android:hint="@string/ETHint1"
        android:inputType="textPersonName"
        android:textColor="@color/putih"
        android:textColorHint="@color/putih"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1"
        android:textColor="@color/putih"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET1" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="254dp"
        android:layout_height="145dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv1">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/putih"
            android:text="@string/pilihan1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/putih"
            android:text="@string/pilihan2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="@color/putih"
            android:text="@string/pilihan3" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/tswitch"
        android:textColor="@color/putih"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/button"
        android:textColor="@color/putih"
        android:backgroundTint="@color/abu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="169dp"
        android:layout_height="201dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="73dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:srcCompat="@drawable/gambar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="1dp"
        android:text="@string/tv2"
        android:textColor="@color/putih"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />


</androidx.constraintlayout.widget.ConstraintLayout>